fixed: layout issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -46,7 +46,7 @@ p{
 	background-color: $primary_color;
 	border-radius: 3px;
 	text-align: center;
-	margin-right: 10px;
+	/*margin-right: 10px;*/
 }
 
 body div .button, 
